docs/tests/testfile19.lox
// test local variable initialization

{
    var a = "outer";
    {
        var a = a; // error
    }

}